--- a/app/static/css/sass/style.scss
+++ b/app/static/css/sass/style.scss
@@ -1,95 +1,115 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Lato');
 
 $min-pg-width: 320px;
+
+$text-color: #f5f5f5;
 $accent-color-light: #9cbcff;
 $accent-color-dark: #5a8fff;
 $background-color: #030303;
 $highlight-color: #f0f0f0;
 $background-transparent: rgba(3, 3, 3, 0.75);
 
-%accent-font
-    font-family: 'Josefin Sans', 'Open Sans', sans-serif;
-    font-weight: 600;
+$main-font-stack: 'Lato', 'Open Sans', sans-serif;
+$accent-font-stack: 'Josefin Sans', 'Open Sans', sans-serif;
 
-%nav-font
-    font-family: 'Josefin Sans', 'Open Sans', sans-serif;
-    font-weight: 400;
-
-html, body
-    font: 16px Lato, 'Open Sans', sans-serif;
-    color: whitesmoke; 
+html {
+    font: 16px/1.1 Lato, 'Open Sans', sans-serif;
     margin: 0;
     min-width: $min-pg-width;
     overflow-x: hidden;
-body
+}
+
+body {
+    color: $text-color;
     background: $background-color center/cover no-repeat;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
 
 a,
 a:visited,
 a:hover,
-a:active
+a:active {
     color: inherit;
     text-decoration: none;
     border-bottom: 1px solid currentColor;
+}
 
-h1
-    font-size: 2.0em;
+h1 {
+    font-size: 2.0rem;
+}
 
-h2
-    font-size: 1.3em;
+h2 {
+    font-size: 1.3rem;
+}
 
-h3
-    font-size: 1.1em;
+h3 {
+    font-size: 1.1rem;
+}
 
-hr
+hr {
     width: 85%;
     margin: 4px auto;
     border: 3px double whitesmoke;
+}
 
-img
+img {
     max-width: 100%;
     max-height: 100%;
+}
 
-#content
+#content {
     margin-top: 96px;
     margin-bottom: 16px;
+}
 
-.alight
+.alight {
     color: $accent-color-light;
+}
 
-.adark
+.adark {
     color: $accent-color-dark;
+}
 
-.text-right
+.text-bold {
+    font-weight: bold;
+}
+
+.text-right {
     text-align: right;
+}
 
-.text-center
+.text-center {
     text-align: center;
+}
 
-.text-shadow
+.text-shadow {
     text-shadow: 1px 1px 1px #000;
+}
 
-.small-text
-    font-size: 0.6em;
+.small-text {
+    font-size: 0.6rem;
+}
 
-.section
+.section {
     background: $background-color;
     background: $background-transparent;
-    padding: 0.75em;
-    margin-bottom: 0.3em;
+    padding: 0.75rem;
+    margin-bottom: 0.3rem;
     border-radius: 8px;
     border: 3px solid $background-color;
+}
 
-.scrollable-content
+.scrollable-content {
     padding-top: 16px;
+}
 
-.flex-grow
+.flex-grow {
     flex-grow: 1;
+}
 
-.flex-spacing-container
+.flex-spacing-container {
     width: 90%;
     margin: auto;
     padding: 4px 0;
@@ -98,15 +118,17 @@ img
     align-items: space-around;
     flex-wrap: wrap;
     flex-grow: 1;
+}
 
-.img-caption
-    font-size: 0.8em;
+.img-caption {
+    font-size: 0.8rem;
     font-style: italic;
     margin-bottom: 8px;
+}
 
 /* Navbar */
 
-#nav-container
+#nav-container {
     z-index: 999;
     background: $background-color;
     background: $background-transparent;
@@ -115,110 +137,121 @@ img
     margin: 0;
     padding: 0;
     position: absolute;
+}
 
-#nav .navbar-brand
-    height: 64px;
-    margin-left: 12px;
-    border: none !important;
-
-#nav .nav-item
-    @extend %nav-font;
-    font-size: 1.1em;
-    margin-right: 0.3em;
-    transition: color 1s ease-in-out;
+#nav {
+    .navbar-brand {
+        height: 64px;
+        margin-left: 12px;
+        border: none !important;
+    }
+    .nav-item {
+        font: 400 1.1rem/0.8 $accent-font-stack;
+        transition: color 1s ease-in-out;
+        &:not(:last-of-type) {
+            margin-right: 0.5rem;
+        }
+    }
+}
 
 .nav-active,
-.nav-item:hover
+.nav-item:hover {
     color: $accent-color-light !important;
+}
 
 /* Home Page */
 
-#home-logo
+#home-logo {
     width: 192px;
-    
-#home-text
-    @extend %accent-font;
+}
+
+#home-text,
+#error-text {
+    font: 600 1rem/1.2 $accent-font-stack;
+}
 
 /* About Page */
 
-#about-profile
+#about-profile {
     width: 256px;
     border: 3px solid $background-color;
     border-radius: 64px;
     overflow: hidden;
     margin: 0 auto 8px auto;
+}
 
-.about-header
-    text-align: center;
-
-.about-tech-subheader
-    font-weight: bold;
-
-.about-tech-item
+.about-tech-item {
     width: auto;
     overflow: hidden;
     white-space: nowrap;
     padding: 4px;
+}
 
-.about-social-link
+.about-social-link {
     border: none !important;
+}
 
-.about-social-icon
+.about-social-icon {
     width: 48px;
-
-.about-social-icon:not(:last-of-type)
-    margin-right: 4px;
+    &:not(:last-of-type) {
+        margin-right: 4px;
+    }
+}
 
 /* Project */
 
-#project-viewer
+#project-viewer {
     width: 100%;
     min-height: 240px;
     background-repeat: no-repeat;
     background-position: center;
+    img {
+        display: block;
+        margin: auto;
+        max-height: 80vh;
+    }
+}
 
-#project-viewer img
-    display: block;
-    margin: auto;
-    max-height: 80vh;
-    
-#project-description
-    width: 100%;
-
-#project-tech-d
+#project-tech-d {
     display: none;
+}
 
 #project-nav,
 #project-nav-tabContainer,
-.project-nav-cat
+.project-nav-cat {
     min-height: 92px;
+}
 
-.project-nav-tab
+.project-nav-tab {
     border: 3px ridge $highlight-color !important;
     padding: 8px 4px;
+    &.active {
+        background: $accent-color-dark !important;
+        font-weight: bold;
+    }
+}
 
-.project-nav-tab.active
-    background: $accent-color-dark !important;
-    font-weight: bold;
-
-.project-nav-btn-container
+.project-nav-btn-container {
     justify-content: center;
     width: 100%;
     max-width: 64px;
     margin: auto;
+}
 
-.project-nav-btn
+.project-nav-btn {
     width: 100%;
     padding-top: 100%;
     border: none !important;
     cursor: pointer;
+}
 
-.project-nav-slider-container
+.project-nav-slider-container {
     overflow: hidden;
     position: relative;
     min-height: 92px;
+}
 
-.project-nav-slider
+.project-nav-slider {
     position: absolute;
     min-width: 100%;
     overflow-x: auto;
@@ -226,8 +259,9 @@ img
     top: 0;
     left: 0;
     white-space: nowrap;
+}
 
-.project-nav-item
+.project-nav-item {
     display: inline-block;
     vertical-align: top;
     flex-shrink: 0;
@@ -239,106 +273,126 @@ img
     border: 1px solid whitesmoke;
     padding: 4px;
     margin: 4px;
+}
 
-.project-nav-item-active
+.project-nav-item-active {
     border: 2px solid $accent-color-dark !important;
+}
 
-.project-hr
+.project-hr {
     width: 100%;
     border: 1px solid whitesmoke;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.6rem;
+}
 
 /* Contact Page */
 
-#contact-form
+#contact-form {
     margin-top: 16px;
+}
 
-#contact-response
+#contact-response {
     font-weight: bold;
     margin: 16px 0;
+}
 
-#contact-confirm
+#contact-confirm {
     color: #69d992;
+}
 
-#contact-err
+#contact-err {
     color: #e37363;
+}
 
 /* Footer */
 
-#footer-container
+#footer-container {
     background: $background-color;
     background: $background-transparent;
     border-top: 3px groove $background-color;
-    padding-bottom: 0.3em;
+    padding-bottom: 0.3rem;
     width: 100%;
     color: #909090;
+}
 
-.lang-active
+.lang-active {
+    color: $highlight-color !important;
     font-weight: bold;
-
-/* Error */
-
-#error-text
-    @extend %accent-font;
+}
 
 // Bootstrap sm
-@media screen and (min-width : 576px)
-
-    #home-logo
+@media screen and (min-width : 576px) {
+    #home-logo {
         width: 256px;
+    }
 
-    h1
-        font-size: 2.2em;
+    h1 {
+        font-size: 2.2rem;
+    }
 
-    h2
-        font-size: 1.6em;
+    h2 {
+        font-size: 1.6rem;
+    }
 
-    h3
-        font-size: 1.3em;
+    h3 {
+        font-size: 1.3rem;
+    }
+}
 
 // Bootstrap md
-@media screen and (min-width : 768px)
-
-    #home-logo
+@media screen and (min-width : 768px) {
+    #home-logo {
         width: 192px;
-    
-    #home-text
-        text-align: left !important;
-        padding-left: 1em;
+    }
 
-    #project-tech-d
+    #home-text {
+        text-align: left !important;
+        padding-left: 1rem;
+    }
+
+    #project-tech-d {
         margin-top: 8px;
         display: block;
+    }
 
-    #project-tech-m
+    #project-tech-m {
         display: none;
-        
+    }
+}
 
 // Bootstrap lg
-@media screen and (min-width : 960px)
+@media screen and (min-width : 960px) {
+    #nav .nav-item {
+        font-size: 1.6rem;
+    }
 
-    #nav .nav-item
-        font-size: 1.6em;
-
-.project-nav-tab
-    border: 3px ridge $highlight-color;
-    padding: 8px 8px;
+    .project-nav-tab {
+        border: 3px ridge $highlight-color;
+        padding: 8px 8px;
+    }
+}
 
 // Bootstrap xl
-@media screen and (min-width : 1200px)
-
-    #home-logo
+@media screen and (min-width : 1200px) {
+    #home-logo {
         width: 256px;
+    }
 
-    #home-text h1
-        font-size: 4.0em;
+    #home-text {
+        h1 {
+            font-size: 4.0rem;
+        }
 
-    #home-text h2
-        font-size: 2.6em;
+        h2 {
+            font-size: 2.6rem;
+        }
 
-    #home-text h3
-        font-size: 2.1em;
+        h3 {
+            font-size: 2.1rem;
+        }
+    }
 
-    #nav .nav-item
-        font-size: 2.2em;
-
+    #nav .nav-item {
+        font-size: 2.2rem;
+    }
+}
