--- a/app/static/css/expanded/style.css
+++ b/app/static/css/expanded/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Lato");
+@import url("https://fonts.googleapis.com/css?family=Overlock|Lato");
 html {
   font: 16px/1.1 Lato, 'Open Sans', sans-serif;
   margin: 0;
@@ -25,6 +25,12 @@ a:hover,
 a:active {
   color: inherit;
   text-decoration: none;
+}
+
+a:not(.nav-item),
+a:visited:not(.nav-item),
+a:hover:not(.nav-item),
+a:active:not(.nav-item) {
   border-bottom: 1px solid currentColor;
 }
 
@@ -81,7 +87,7 @@ img {
 }
 
 .small-text {
-  font-size: 0.6rem;
+  font-size: 0.55rem;
 }
 
 .section {
@@ -149,6 +155,10 @@ img {
   position: absolute;
 }
 
+#nav #nav-content {
+  max-width: 100%;
+}
+
 #nav .navbar-brand {
   height: 64px;
   margin-left: 12px;
@@ -156,13 +166,25 @@ img {
 }
 
 #nav .nav-item {
-  font: 400 1.1rem/0.8 "Josefin Sans", "Open Sans", sans-serif;
-  -webkit-transition: color 1s ease-in-out;
-  transition: color 1s ease-in-out;
+  font: 400 1.1rem/0.8 "Overlock", "Open Sans", sans-serif;
+  -webkit-transition: color 0.25s ease-in-out;
+  transition: color 0.25s ease-in-out;
 }
 
 #nav .nav-item:not(:last-of-type) {
   margin-right: 0.5rem;
+}
+
+#nav .collapsing {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#nav .collapse.show {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .nav-active,
@@ -177,7 +199,7 @@ img {
 
 #home-text,
 #error-text {
-  font: 600 1rem/1.2 "Josefin Sans", "Open Sans", sans-serif;
+  font: 600 1rem/1.2 "Overlock", "Open Sans", sans-serif;
 }
 
 #home-subtext {
@@ -186,7 +208,7 @@ img {
 
 #typing-text-ctr {
   position: relative;
-  height: 0.83em;
+  height: 0.91em;
 }
 
 #typing-spacer {
@@ -279,71 +301,115 @@ img {
   display: none;
 }
 
-#project-nav,
-#project-nav-tabContainer,
-.project-nav-cat {
-  min-height: 92px;
-}
-
-.project-nav-tab {
+.project-tab {
   border: 3px ridge #f0f0f0 !important;
   padding: 8px 4px;
 }
 
-.project-nav-tab.active {
+.project-tab.active {
   background: #5a8fff !important;
   font-weight: bold;
 }
 
-.project-nav-btn-container {
+.project-card {
+  display: block;
+  text-decoration: none;
+  position: relative;
+  cursor: pointer;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin: 8px;
+  background: #030303;
+  border: 2px inset #f5f5f5;
+  -webkit-box-shadow: 2px 2px 6px #000;
+          box-shadow: 2px 2px 6px #000;
+  -webkit-transition: all 1.5s ease-in-out;
+  transition: all 1.5s ease-in-out;
+}
+
+.project-card.featured {
+  width: 360px;
+  height: 360px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 100%;
-  max-width: 64px;
-  margin: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.project-nav-btn {
-  width: 100%;
-  padding-top: 100%;
-  border: none !important;
-  cursor: pointer;
-}
-
-.project-nav-slider-container {
-  overflow: hidden;
-  position: relative;
-  min-height: 92px;
-}
-
-.project-nav-slider {
-  position: absolute;
-  min-width: 100%;
-  overflow-x: auto;
-  display: block;
-  top: 0;
-  left: 0;
-  white-space: nowrap;
-}
-
-.project-nav-item {
-  display: inline-block;
-  vertical-align: top;
+.project-card .featured-contents {
+  width: 352px;
+  height: 352px;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  font-weight: bold;
-  white-space: normal;
-  text-align: center;
-  width: 126px;
-  height: 84px;
-  border: 1px solid whitesmoke;
-  padding: 4px;
-  margin: 4px;
+  border: 2px outset #f5f5f5;
+  -webkit-transition: all 1.5s ease-in-out;
+  transition: all 1.5s ease-in-out;
 }
 
-.project-nav-item-active {
-  border: 2px solid #5a8fff !important;
+.project-card:hover {
+  -webkit-box-shadow: 6px 6px 2px #000;
+          box-shadow: 6px 6px 2px #000;
+  border: 2px inset #9cbcff;
+}
+
+.project-card:hover .featured-contents {
+  border: 2px outset #9cbcff;
+}
+
+.project-card:hover .project-card-title,
+.project-card:hover .featured-contents .project-card-title {
+  opacity: 1;
+}
+
+.project-card:hover .project-card-img img,
+.project-card:hover .featured-contents .project-card-img img {
+  min-width: 120%;
+  min-height: 120%;
+}
+
+.project-card-img {
+  overflow: hidden;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.project-card-img img {
+  -webkit-transition: all 1.5s ease-in-out;
+  transition: all 1.5s ease-in-out;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.project-card-title {
+  font: 1.4rem/1.1 "Overlock", "Open Sans", sans-serif;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: all 1.5s ease-in-out;
+  transition: all 1.5s ease-in-out;
+  opacity: 0;
+  position: absolute;
+  vertical-align: bottom;
+  padding: 4px;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  text-shadow: 2px 2px 1px #000;
 }
 
 .project-hr {
