--- a/app/static/css/sass/style.scss
+++ b/app/static/css/sass/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Lato');
+@import url('https://fonts.googleapis.com/css?family=Overlock|Lato');
 
 $min-pg-width: 320px;
 
@@ -10,7 +10,7 @@ $highlight-color: #f0f0f0;
 $background-transparent: rgba(3, 3, 3, 0.75);
 
 $main-font-stack: 'Lato', 'Open Sans', sans-serif;
-$accent-font-stack: 'Josefin Sans', 'Open Sans', sans-serif;
+$accent-font-stack: 'Overlock', 'Open Sans', sans-serif;
 
 html {
     font: 16px/1.1 Lato, 'Open Sans', sans-serif;
@@ -33,7 +33,9 @@ a:hover,
 a:active {
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px solid currentColor;
+    &:not(.nav-item) {
+        border-bottom: 1px solid currentColor;
+    }
 }
 
 h1 {
@@ -89,7 +91,7 @@ img {
 }
 
 .small-text {
-    font-size: 0.6rem;
+    font-size: 0.55rem;
 }
 
 .section {
@@ -145,6 +147,9 @@ img {
 }
 
 #nav {
+    #nav-content {
+        max-width: 100%;
+    }
     .navbar-brand {
         height: 64px;
         margin-left: 12px;
@@ -152,10 +157,17 @@ img {
     }
     .nav-item {
         font: 400 1.1rem/0.8 $accent-font-stack;
-        transition: color 1s ease-in-out;
+        transition: color 0.25s ease-in-out;
         &:not(:last-of-type) {
             margin-right: 0.5rem;
         }
+    }
+    // BS4 still reverts the an expanded hamburger nav to a div, even if it started as a flex, creating issues.
+    .collapsing {
+        display: flex;
+    }
+    .collapse.show {
+        display: flex;
     }
 }
 
@@ -181,7 +193,7 @@ img {
 
 #typing-text-ctr {
     position: relative;
-    height: 0.83em;
+    height: 0.91em;
 }
 
 #typing-spacer {
@@ -255,13 +267,7 @@ img {
     display: none;
 }
 
-#project-nav,
-#project-nav-tabContainer,
-.project-nav-cat {
-    min-height: 92px;
-}
-
-.project-nav-tab {
+.project-tab {
     border: 3px ridge $highlight-color !important;
     padding: 8px 4px;
     &.active {
@@ -270,52 +276,76 @@ img {
     }
 }
 
-.project-nav-btn-container {
-    justify-content: center;
-    width: 100%;
-    max-width: 64px;
-    margin: auto;
-}
-
-.project-nav-btn {
-    width: 100%;
-    padding-top: 100%;
-    border: none !important;
-    cursor: pointer;
-}
-
-.project-nav-slider-container {
-    overflow: hidden;
-    position: relative;
-    min-height: 92px;
-}
-
-.project-nav-slider {
-    position: absolute;
-    min-width: 100%;
-    overflow-x: auto;
+.project-card {
     display: block;
-    top: 0;
-    left: 0;
-    white-space: nowrap;
-}
-
-.project-nav-item {
-    display: inline-block;
-    vertical-align: top;
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+    flex-grow: 0;
     flex-shrink: 0;
-    font-weight: bold;
-    white-space: normal;
-    text-align: center;
-    width: 126px;
-    height: 84px;
-    border: 1px solid whitesmoke;
-    padding: 4px;
-    margin: 4px;
+    margin: 8px;
+    background: $background-color;
+    border: 2px inset $text-color;
+    box-shadow: 2px 2px 6px #000;
+    transition: all 1.5s ease-in-out;
+    &.featured {
+        width: 360px;
+        height: 360px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    & .featured-contents {
+        width: 352px;
+        height: 352px;
+        flex-grow: 0;
+        flex-shrink: 0;
+        border: 2px outset $text-color;
+        transition: all 1.5s ease-in-out;
+    }
+    &:hover {
+        box-shadow: 6px 6px 2px #000;
+        border: 2px inset $accent-color-light;
+        & .featured-contents {
+            border: 2px outset $accent-color-light;
+        }
+        & .project-card-title,
+        & .featured-contents .project-card-title {
+            opacity: 1;
+        }
+        & .project-card-img img,
+        & .featured-contents .project-card-img img {
+            min-width: 120%;
+            min-height: 120%;
+        }
+    }
 }
 
-.project-nav-item-active {
-    border: 2px solid $accent-color-dark !important;
+.project-card-img {
+    overflow: hidden;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    & img {
+        transition: all 1.5s ease-in-out;
+        min-width: 100%;
+        min-height: 100%;
+    }
+}
+.project-card-title {
+    font: 1.4rem/1.1 $accent-font-stack;
+    pointer-events: none;
+    user-select: none;
+    transition: all 1.5s ease-in-out;
+    opacity: 0;
+    position: absolute;
+    vertical-align: bottom;
+    padding: 4px;
+    width: 100%;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    text-shadow: 2px 2px 1px #000;
 }
 
 .project-hr {
