--- a/app/views/includes/nav.pug
+++ b/app/views/includes/nav.pug
@@ -3,10 +3,10 @@ div#nav-container.container-fluid
 		div.col
 			nav#nav.navbar.navbar-dark.navbar-expand-md.align-items-center
 				a.navbar-brand(href=rootDir)
-					img(src='/static/media/carrievrtis-logo-nava.png' alt='Carrie Vrtis')
+					img(src='/static/media/carrievrtis-logo-nav.png' alt='Carrie Vrtis')
 				button.navbar-toggler(type='button' data-toggle='collapse' data-target='#nav-content' aria-controls='nav-content' aria-expanded='false' aria-label='Toggle navigation')
 					span.navbar-toggler-icon
-				div#nav-content.navbar-left.collapse.navbar-collapse
+				div#nav-content.navbar-right.flex-wrap.justify-content-around.justify-content-md-end.collapse.navbar-collapse
 					- var sections = ['about', 'code', 'design', 'photo', 'writing', 'contact'];
 					each v in sections
 						a.nav-item.nav-link(class=(activePage == v ? 'nav-active' : '') href=rootDir + v) #{lang[v].name}
