--- a/app/static/css/expanded/style.css
+++ b/app/static/css/expanded/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Overlock|Lato");
+@import url("https://fonts.googleapis.com/css?family=Staatliches|Lato");
 html {
   font: 16px/1.1 Lato, 'Open Sans', sans-serif;
   margin: 0;
@@ -166,7 +166,8 @@ img {
 }
 
 #nav .nav-item {
-  font: 400 1.1rem/0.8 "Overlock", "Open Sans", sans-serif;
+  font: 400 1.1rem/0.8 "Staatliches", "Open Sans", sans-serif;
+  font-variant: small-caps;
   -webkit-transition: color 0.25s ease-in-out;
   transition: color 0.25s ease-in-out;
 }
@@ -199,7 +200,8 @@ img {
 
 #home-text,
 #error-text {
-  font: 600 1rem/1.2 "Overlock", "Open Sans", sans-serif;
+  font: 600 1rem/1.2 "Staatliches", "Open Sans", sans-serif;
+  font-variant: small-caps;
 }
 
 #home-subtext {
@@ -301,6 +303,16 @@ img {
   display: none;
 }
 
+.project-nav-tab {
+  font: 1.3rem/1 "Staatliches", "Open Sans", sans-serif;
+  font-variant: small-caps;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border: 3px ridge #f0f0f0;
+  padding: 8px 8px;
+}
+
 .project-tab {
   border: 3px ridge #f0f0f0 !important;
   padding: 8px 4px;
@@ -326,35 +338,10 @@ img {
   border: 2px inset #f5f5f5;
   -webkit-box-shadow: 2px 2px 6px #000;
           box-shadow: 2px 2px 6px #000;
-  -webkit-transition: all 1.5s ease-in-out;
-  transition: all 1.5s ease-in-out;
-}
-
-.project-card.featured {
-  width: 360px;
-  height: 360px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.project-card .featured-contents {
-  width: 352px;
-  height: 352px;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  border: 2px outset #f5f5f5;
-  -webkit-transition: all 1.5s ease-in-out;
-  transition: all 1.5s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  max-width: 256px;
+  min-width: 192px;
 }
 
 .project-card:hover {
@@ -363,19 +350,8 @@ img {
   border: 2px inset #9cbcff;
 }
 
-.project-card:hover .featured-contents {
-  border: 2px outset #9cbcff;
-}
-
-.project-card:hover .project-card-title,
-.project-card:hover .featured-contents .project-card-title {
-  opacity: 1;
-}
-
-.project-card:hover .project-card-img img,
-.project-card:hover .featured-contents .project-card-img img {
-  min-width: 120%;
-  min-height: 120%;
+.project-card:hover .project-card-vignette {
+  opacity: 0;
 }
 
 .project-card-img {
@@ -393,23 +369,34 @@ img {
 }
 
 .project-card-title {
-  font: 1.4rem/1.1 "Overlock", "Open Sans", sans-serif;
+  color: #f5f5f5;
+  font: 1.4rem/1.1 "Staatliches", "Open Sans", sans-serif;
+  font-variant: small-caps;
   pointer-events: none;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  -webkit-transition: all 1.5s ease-in-out;
-  transition: all 1.5s ease-in-out;
-  opacity: 0;
   position: absolute;
   vertical-align: bottom;
   padding: 4px;
   width: 100%;
   bottom: 0;
   right: 0;
-  z-index: 2;
+  z-index: 3;
   text-shadow: 2px 2px 1px #000;
+}
+
+.project-card-vignette {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0.35) 100%);
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 .project-hr {
@@ -497,10 +484,6 @@ img {
 @media screen and (min-width: 960px) {
   #nav .nav-item {
     font-size: 1.6rem;
-  }
-  .project-nav-tab {
-    border: 3px ridge #f0f0f0;
-    padding: 8px 8px;
   }
 }
 
