--- a/app/views/project.pug
+++ b/app/views/project.pug
@@ -69,4 +69,4 @@ html(lang=lang.lang)
 										| #{v}
 
 		include ./includes/footer.pug
-		script(src='/static/js/project.js')
+		script(src='/static/js/project-load.js')
