--- a/app/views/project-directory.pug
+++ b/app/views/project-directory.pug
@@ -1,10 +1,12 @@
 mixin projectCard(project, projectId, catId)
-	a.project-card(href=rootDir + activePage + '/' + catId + '/' + projectId)
-		div.project-card-img.d-flex.align-items-center.justify-content-center
+	a.project-card(href=rootDir + activePage + '/' + catId + '/' + projectId class=(project.contentType == 'html' && !project.thumbnail ? 'project-card-square' : false))
+		div.project-card-img
 			if project.contentType == 'img'
 				img(src=project.content.replace('%scale', '256') alt=project.title)
 			else if project.thumbnail
 				img(src=project.thumbnail.replace('%scale', '256') alt=project.title)
+			else if project.contentType == 'html'
+				div(data-content=(project.content[lang.lang] ? project.content[lang.lang] : project.content.en))
 			else
 				img(src='/static/media/cv-nav-staat.png'  alt=project.title)
 		div.project-card-title.alight.text-right #{project.name}
@@ -40,3 +42,4 @@ html(lang=lang.lang)
 												+projectCard(w, j, k)
 
 		include ./includes/footer.pug
+		script(src='/static/js/project-preview.js')
