--- a/app/static/css/sass/style.scss
+++ b/app/static/css/sass/style.scss
@@ -62,6 +62,17 @@ img {
     max-height: 100%;
 }
 
+pre {
+    background: $text-color;
+    background: rgba(255, 255, 255, 0.65);
+    padding: 0.75rem;
+    border-radius: 0.5rem;
+}
+
+code {
+    font: 'Lucida Console', Monaco, monospace;
+}
+
 #content {
     margin-top: 96px;
     margin-bottom: 16px;
@@ -260,7 +271,6 @@ img {
     background-repeat: no-repeat;
     background-position: center;
     img {
-        display: block;
         margin: auto;
         max-height: 80vh;
     }
@@ -268,6 +278,11 @@ img {
 
 #project-tech-d {
     display: none;
+}
+
+#project-nav-tabContainer {
+    margin-top: -1rem;
+    margin-bottom: 1.5rem;
 }
 
 .project-nav-tab {
@@ -313,11 +328,17 @@ img {
 .project-card-square {
     width: 256px;
     height: 256px;
+    & a {
+        pointer-events: none;
+    }
+    & img {
+        zoom: 0.4;
+    }
 }
 
 .project-card-img {
     color: $lowlight-color;
-    font-size: 0.33rem;
+    font-size: 0.55rem;
     overflow: hidden;
     z-index: 1;
     width: 100%;
@@ -327,8 +348,23 @@ img {
         min-width: 100%;
         min-height: 100%;
     }
-    & h1 {
-        font-size: 0.55rem;
+    & a {
+        pointer-events: none;
+        width: auto;
+        height: auto;
+    }
+    & h1,
+    & h2,
+    & h3,
+    & h4,
+    & h5 {
+        font-size: 0.77rem;
+    }
+    & div,
+    & code,
+    & pre {
+        vertical-align: bottom;
+        overflow: hidden;
     }
 }
 .project-card-title {
@@ -362,6 +398,10 @@ img {
     width: 100%;
     border: 1px solid whitesmoke;
     margin-bottom: 0.6rem;
+}
+
+[data-content] img {
+    display: inline-block;
 }
 
 /* Contact Page */
