--- a/app/views/about.pug
+++ b/app/views/about.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang=lang.lang)
 	include ./includes/header.pug
-	body(style='background: #030303 url("/static/media/bg/' + bg + '.jpg") center/cover no-repeat')
+	body(style=`background: #030303 url("/static/media/bg/${bg}.jpg") center/cover no-repeat`) center/cover no-repeat')
 		include ./includes/nav.pug
 		div#content.container.flex-grow.scrollable-content
 			div.row.align-items-start.justify-content-center
