Fixed stray style tags being printed behind nav.

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang=lang.lang)
 	include ./includes/header.pug
-	body(style=`background: #030303 url("/static/media/bg/${bg}.jpg") center/cover no-repeat`) center/cover no-repeat')
+	body(style=`background: #030303 url("/static/media/bg/${bg}.jpg") center/cover no-repeat`)
 		include ./includes/nav.pug
 		div#content.container.d-flex.align-items-center.justify-content-center.flex-grow
 			div.row.align-items-center.justify-content-center.flex-column.flex-md-row
