--- a/app/views/project-directory.pug
+++ b/app/views/project-directory.pug
@@ -18,7 +18,7 @@ mixin projectCard(project, projectId, catId)
 doctype html
 html(lang=lang.lang)
 	include ./includes/header.pug
-	body(style=`background: #030303 url("/static/media/bg/${bg}.jpg") center/cover no-repeat`) center/cover no-repeat')
+	body(style=`background: #030303 url("/static/media/bg/${bg}.jpg") center/cover no-repeat`)
 		include ./includes/nav.pug
 		div#content.container.flex-grow.scrollable-content
 			//- Project Description
